added code build config

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "aws-sdk": "^2.1619.0",
     "uuid": "^9.0.1"
   },
+  "scripts": {
+    "test": "echo \"All test passed!\""
+  },
   "devDependencies": {
     "serverless-iam-roles-per-function": "^3.2.0"
   }
